# sound-exp-1

./: .gitignore  CMakeLists.txt
src/: main.cpp  player.cpp  player.h  sample.hpp  sndGen.hpp  sndgen.cpp  sndgen.h  sound.cpp  sound.h  sound.hpp
src/filters/: filter.hpp  linvolchange.h  linvolchange.hpp  pulsevolchange.hpp
